infra/tapo-ui/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tapo-ui
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: ca-homelab
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - tapo.local-pi
    secretName: tapo-ui-tls
  rules:
  - host: tapo.local-pi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tapo-ui
            port:
              number: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: tapo-ui
  namespace: default
spec:
  selector:
    app: tapo-ui
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tapo-ui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tapo-ui
  template:
    metadata:
      labels:
        app: tapo-ui
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: ghcr-credentials
      containers:
      - name: tapo-ui
        image: ghcr.io/minhngo248/smart-home/tapo-ui:v0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
